[tool.poetry]
name = "cart-pole"
version = "0.1.0"
description = ""
authors = ["NatanDuarte <natanprocopio@gmail.com>"]
readme = "README.md"
packages = [{include = "cart_pole"}]

[tool.poetry.dependencies]
python = "^3.11"
gym = "^0.26.2"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
